# Amazuki

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  bun.lockb  clean.sh  package.json
.cargo/: config.toml
.github/workflows/: check.yml
src-core/: Cargo.toml
src-daemon/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
