[workspace]
resolver = "2"
members = ["src-tauri"]
default-members = ["src-tauri"]

[workspace.package]
version = "0.0.1"
authors = ["TouhouAsia <touhouasia@proton.me>"]
description = "A simple, fast, and secure App."
repository = "https://github.com/TouhouAsia/Amazuki"
keywords = ["development"]
license = "Apache-2.0"
homepage = ""
edition = "2021"
rust-version = "1.74"

[workspace.dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tauri-build = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
