[workspace]
resolver = "2"
members = ["src-core", "src-daemon", "src-tauri"]
default-members = ["src-core", "src-daemon", "src-tauri"]

[workspace.package]
version = "0.0.1"
authors = ["TouhouAsia <touhouasia@proton.me>"]
description = "A simple, fast, and secure App."
repository = "https://github.com/TouhouAsia/Amazuki"
keywords = ["development"]
license = "Apache-2.0"
homepage = ""
edition = "2021"
rust-version = "1.74"

[workspace.dependencies]
anyhow = "1.0.77"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
tauri = { version = "1.5", features = ["clipboard-all", "dialog-open", "dialog-save", "shell-open"] }
tauri-build = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.18.0"
winit = "0.29.6"
